--- a/SRC/MsgElf/App.xaml
+++ b/SRC/MsgElf/App.xaml
@@ -1,9 +1,6 @@
-﻿<Application x:Class="MsgElf.App"
+﻿<prism:PrismApplication x:Class="MsgElf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MsgElf"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+             xmlns:prism="http://prismlibrary.com/">
+</prism:PrismApplication>
