--- a/SRC/MsgElf/Views/MainWindow.xaml
+++ b/SRC/MsgElf/Views/MainWindow.xaml
@@ -5,6 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MsgElf"
         xmlns:prism="http://prismlibrary.com/"
+        ShowInTaskbar="False"
+        xmlns:modernWpf="http://schemas.modernwpf.com/2019"
+        modernWpf:WindowHelper.UseModernWindowStyle="True"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         Title="{Binding Title}"
